--- a/AUTHORS
+++ b/AUTHORS
@@ -62,3 +62,4 @@ Markus Köhne <markus@koehne.dev>
 Max Steffen <git@max-steffen.dev>
 Mohd Faheem Ansari <codefaheem@gmail.com>
 Om Phatak <everythingoutdated@gmail.com>
+Liu Zhisong <liuzs0666@gmail.com>
