--- a/packages/firebase_auth/firebase_auth/example/android/app/src/main/res/values/strings.xml
+++ b/packages/firebase_auth/firebase_auth/example/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
   <string name="facebook_app_id">128693022464535</string>
   <!--  The Facebook client token should not be made public but this is a developer mode app with whitelisted user access -->
   <string name="facebook_client_token">16dbbdf0cfb309034a6ad98ac2a21688</string>
+  <!-- Default web client id for Play games -->
+  <string name="default_web_client_id">406099696497-a12gakvts4epfk5pkio7dphc1anjiggc.apps.googleusercontent.com</string>
+  <string translatable="false"  name="game_services_project_id">406099696497</string>
 </resources>
